@@ -2,6 +2,7 @@
 Changes in 1.7.1 (05.07.2010) TA
 	- BurningVideo 
 		- add Normalmap Rendering ( one light only), pushed Burningvideo to 0.46
+		- add Stencil Shadow Rendering (one color only and 32 bit only), pushed Burningvideo to 0.47
 		- internal vertexformat changed
 		- changed fixpoint from 9 to 10 bit fract resolution
 		- renamed createBurningVideoDriver to createBurningVideoDriver and uses SIrrlichtCreationParameters like opengl
